src/tests/krate/publish/snapshots/all__krate__publish__validation__bad_name-5.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.json()
---
{
  "errors": [
    {
      "detail": "invalid character `á` in crate name: `áccênts`, the first character must be an ASCII character"
    }
  ]
}
