src/tests/krate/publish/snapshots/all__krate__publish__validation__empty_json.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "invalid upload request: missing field `name` at line 1 column 2"
    }
  ]
}
