src/tests/krate/publish/snapshots/all__krate__publish__validation__invalid_license.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "unknown or invalid license expression; see http://opensource.org/licenses for options, and http://spdx.org/licenses/ for their identifiers"
    }
  ]
}
