src/tests/krate/publish/snapshots/all__krate__publish__validation__invalid_names-2.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.into_json()
---
errors:
  - detail: "invalid upload request: invalid value: string \"foo bar\", expected a valid crate name to start with a letter, contain only letters, numbers, hyphens, or underscores and have at most 64 characters at line 1 column 17"

