src/tests/krate/publish/snapshots/all__krate__publish__validation__invalid_names-5.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "invalid character `á` in crate name: `áccênts`, the first character must be an ASCII character, or `_`"
    }
  ]
}
