src/tests/krate/publish/snapshots/all__krate__publish__validation__invalid_names-9.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.into_json()
---
errors:
  - detail: cannot upload a crate with a reserved name

