src/tests/krate/publish/snapshots/all__krate__publish__validation__invalid_names.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "the crate name cannot be an empty"
    }
  ]
}
