src/tests/krate/publish/snapshots/all__krate__publish__validation__invalid_urls.snap
---
source: src/tests/krate/publish/validation.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "URL for field `documentation` must begin with http:// or https:// (url: javascript:alert('boom'))"
    }
  ]
}
